[package]
name = "hydro-strike"
version = "0.1.0"
edition = "2021"

default-run = "hydro-strike"

[profile.release]
debug = 1

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
biquad = "0.4.2"
chrono = "0.4.38"
debug-helper = { version = "0.1.0", path = "../../../Rust/debug-helper" }
env_logger = "0.11.5"
ice9-bindings = { version = "0.1.0", path = "ice9-bindings" }
liquid-dsp-bindings-sys = { version = "0.1.0", path = "../../../Rust/liquid-dsp-bindings-sys" }
log = "0.4.22"
log-derive = "0.4.1"
nom = "7.1.3"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2.19"
# libhackrf-sys = { version = "0.1.0", path = "../../../../WorkSpace/Rust/libhackrf-sys" }
rustfft = "6.2.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.132"
signalbool = "0.2.5"
soapysdr = { version = "0.4.0", features = ["log"] }
tungstenite = "0.24.0"

[features]
ice9 = []

default = ["ice9"]

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
rand = { version = "0.8.5", features = ["small_rng"] }
