[package]
name = "rfraptor"
version = "0.1.0"
edition = "2021"

default-run = "rfraptor"


[profile.release]
debug = 2
# lto = "fat"
panic = "abort"
# codegen-units = 1

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
az = "1.2.1"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive", "string"] }
color-eyre = "0.6.3"
csv = "1.3.1"
ctrlc = "3.4.5"
env_logger = "0.11.5"
libbtbb-sys = { version = "0.1.0", path = "./libbtbb-sys" }
# liquid-dsp-sys = { version = "0.1.0", features = ["num-complex"] }
liquid-dsp-sys = { path = "./liquid-dsp-sys", features = ["num-complex"] }
log = "0.4.22"
log-derive = "0.4.1"
nom = "7.1.3"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui = "0.29.0"
regex = "1.11.1"
rustfft = "6.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
soapysdr = { version = "0.4.0", features = ["log"] }
thread-priority = "1.1.0"
tui-logger = "0.14.1"
useful_number = "0.1.2"
zerocopy = "0.8.9"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
channel_power_2 = []

default = ["channel_power_2"]

[build-dependencies]
cc = "1.1.31"
cmake = "0.1.52"
